@@ -23,37 +23,33 @@
  * along with Alfresco. If not, see <http://www.gnu.org/licenses/>.
  * #L%
  */
-package org.alfresco.hxi_connector.live_ingester.adapters.messaging.repository;
+package org.alfresco.hxi_connector.common.adapters.messaging.repository;
 
-import java.util.Optional;
 import java.util.function.Predicate;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.logging.log4j.util.Strings;
-import org.springframework.stereotype.Component;
+import org.apache.commons.lang3.StringUtils;
 
-import org.alfresco.hxi_connector.live_ingester.adapters.config.IntegrationProperties;
-import org.alfresco.hxi_connector.live_ingester.adapters.config.properties.Repository;
-import org.alfresco.hxi_connector.live_ingester.adapters.messaging.repository.api.DiscoveryApiClient;
+import org.alfresco.hxi_connector.common.adapters.messaging.repository.api.DiscoveryApiClient;
+import org.alfresco.hxi_connector.common.config.properties.Application;
 
 @Slf4j
 @RequiredArgsConstructor
-@Component
 public class ApplicationInfoProvider
 {
 
     public static final String APP_INFO_PATTERN = "ACS HXI Connector/%s ACS/%s (%s)";
     public static final String USER_AGENT_DATA = "user-agent-data";
-    public static final String USER_AGENT_PARAM = "&userAgent=${exchangeProperty.%s}".formatted(USER_AGENT_DATA);
-    private final Optional<DiscoveryApiClient> discoveryApiClient;
-    private final IntegrationProperties integrationProperties;
+    public static final String USER_AGENT_PARAM = String.format("&userAgent=${exchangeProperty.%s}", USER_AGENT_DATA);
+    private final DiscoveryApiClient discoveryApiClient;
+    private final Application applicationProperties;
 
     private String applicationInfo;
 
     public String getUserAgentData()
     {
-        if (Strings.isBlank(applicationInfo))
+        if (StringUtils.isBlank(applicationInfo))
         {
             applicationInfo = calculateUserAgentData();
         }
@@ -62,7 +58,7 @@ public class ApplicationInfoProvider
 
     private String calculateUserAgentData()
     {
-        String applicationVersion = integrationProperties.application().version();
+        String applicationVersion = applicationProperties.getVersion();
         String repositoryVersion = Optional.of(integrationProperties)
                 .map(IntegrationProperties::alfresco)
                 .map(IntegrationProperties.Alfresco::repository)
@@ -71,6 +67,6 @@ public class ApplicationInfoProvider
                 .orElseGet(() -> discoveryApiClient.flatMap(DiscoveryApiClient::getRepositoryVersion)
                         .orElseThrow(() -> new IllegalStateException("The repository version cannot be retrieved from either the Discovery API or the Live Ingester configuration.")));
         String osVersion = System.getProperty("os.name") + " " + System.getProperty("os.version") + " " + System.getProperty("os.arch");
-        return APP_INFO_PATTERN.formatted(applicationVersion, repositoryVersion, osVersion);
+        return String.format(APP_INFO_PATTERN, applicationVersion, repositoryVersion, osVersion);
     }
 }
